# document-indexer

./: CMakeLists.txt  README.md  main.c
document-processor/: document_processor.c  document_processor.h
indexer/: document_processor.h  indexer.c  indexer.h  text_indexer.c  text_indexer.h
text-extractor/: text_extractor.c  text_extractor.h
text-tokenizer/: text_tokenizer.c  text_tokenizer.h
util/: util.h  wrapper.c  wrapper.h
